# weex

android/: .gitignore  build.gradle  settings.gradle
android/commons/: build.gradle
android/playground/: build.gradle
android/playground/src/androidTest/: AndroidManifest.xml
android/playground/src/main/: AndroidManifest.xml
android/playground/src/main/jni/: CMakeLists.txt  thh_jni.cpp
android/playground/src/main/res/layout/: activity_index.xml  activity_wxpage.xml  content_main.xml  content_wx_main.xml
android/sdk/: .gitignore  build.gradle  gradle.properties
android/sdk/assets/: weex-main-jsfm.js
android/sdk/buildSrc/: checkStyle.gradle  download_jsc.gradle  jcenter.gradle  packageName.gradle  unstripped.gradle
android/sdk/config/quality/: checkstyle.xml
android/sdk/weex_core/: CMakeLists.txt
android/sdk/weex_core/Source/: WXBridge_jni.h
android/sdk/weex_core/Source/android/: weex_extend_js_api.cpp
android/sdk/weex_core/Source/android/bridge/: script_bridge_in_multi_process.cpp  script_bridge_in_multi_so.cpp
android/sdk/weex_core/Source/android/bridge/platform/: android_side.cpp
android/sdk/weex_core/Source/android/multiprocess/: weex_js_connection.cpp
android/sdk/weex_core/Source/android/wrap/: wx_bridge.cpp
android/sdk/weex_core/Source/base/: log_defines.cpp  log_defines.h
android/sdk/weex_core/Source/base/utils/: log_utils.cpp
android/sdk/weex_core/Source/core/bridge/: platform_bridge.h  script_bridge.h
android/sdk/weex_core/Source/include/: WeexApiHeader.h
android/sdk/weex_core/Source/js_runtime/weex/object/: weex_runtime.h  (+2 more)
(+96 files in other folders)
